@startuml

title __REST's Class Diagram__\n

  namespace com.reservation_system {
    namespace rest {
      class com.reservation_system.rest.ReservationResource {
          + ReservationResource()
          + createReservation()
          + deleteReservation()
          + getAllReservations()
          + getReservation()
          + updateReservation()
      }
    }
  }
  

  namespace com.reservation_system {
    namespace rest {
      class com.reservation_system.rest.UserResource {
          + UserResource()
          + createUser()
          + deleteUser()
          + getAllUsers()
          + getUser()
          + updateUser()
      }
    }
  }
  

  com.reservation_system.rest.ReservationResource o-- com.reservation_system.service.ReservationService : reservationService
  com.reservation_system.rest.UserResource o-- com.reservation_system.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
